--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
+		"cookie": "^0.5.0",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
@@ -27,10 +28,9 @@
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.1",
 		"tslib": "^2.3.1",
+		"@prismicio/client": "^6.4.3",
 		"typescript": "~4.6.2"
 	},
 	"type": "module",
-	"dependencies": {
-		"@prismicio/client": "^6.4.3"
-	}
+	"dependencies": {}
 }
