--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@prismicio/client": "^6.5.0",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
@@ -28,9 +29,7 @@
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.1",
 		"tslib": "^2.3.1",
-		"@prismicio/client": "^6.4.3",
 		"typescript": "~4.6.2"
 	},
-	"type": "module",
-	"dependencies": {}
+	"type": "module"
 }
