--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@prismicio/client": "^6.5.0",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "^1.0.0-next.326",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
@@ -29,9 +30,5 @@
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
 	},
-	"type": "module",
-	"dependencies": {
-		"@prismicio/client": "^6.4.3",
-		"cookie": "^0.5.0"
-	}
+	"type": "module"
 }
